corpus/cpp/template/case-01/snapshots/gcc15/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.cpp:4:24: error: template instantiation failed
help: start from the first user-owned template frame and match template arguments
why: src/main.cpp:4:24: error: no matching function for call to 'takes_same(int, double)'
| src/main.cpp:4:24
| int main() { takes_same(1, 2.0); }
|                        ^
while instantiating:
  - src/main.cpp:2:6 template argument deduction/substitution failed:
  - src/main.cpp:4:24 deduced conflicting types for parameter 'T' ('int' and 'double')
raw:
  src/main.cpp:4:24: error: no matching function for call to 'takes_same(int, double)'
other errors:
  - src/main.cpp:4:14: error: template instantiation failed
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output